# rdmpy

./: .gitignore  CITATION.cff  LICENSE  README.md  environment.yml  pyproject.toml
.github/workflows/: docs.yml
demo/: aggregate_view.ipynb  incident_view.ipynb  station_view.ipynb  time_view.ipynb  train_view.ipynb
demo/data/: incidents.py  reference.py  schedule.py  schedule_cleaning.py
demo/data/reference provided/: stations_ref_with_dft.json
demo/data/reference provided/UK map shapefile/track lines/: elrs.dbf  elrs.shx
docs/: contributors.rst  demo_workflow.rst  getting_started.rst  how_to_contribute.rst  index.rst  troubleshooting.rst
docs/_static/: heatmap_incident_62537_07_DEC_2024_0600_period1440min_interval60min.html  time_view_08_APR_2024.html  time_view_09_APR_2024.html  time_view_21_OCT_2024.html  time_view_28_APR_2024.html  train_view_21700001_12931_54311_07-DEC-2024.html
experiments/five_min_window/: README.md  window_metrics.py
rdmpy/: preprocessor.py  utils.py
rdmpy/outputs/: __init__.py  analysis_tools.py  load_data.py
tests/: test_outputs_analysis_tools.py  test_outputs_load_data.py  test_outputs_utils.py  test_preprocessor.py  test_utils.py
